# pdfquery

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  ISA.md  Jenkinsfile  README.md  app.py  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
ccep/: chunker.py  cli.py  config.py  embedder.py  extractor.py  models.py  rag.py  vectordb.py
jenkins/: Dockerfile  docker-compose.yml  jenkins.yaml
pdfquery/: chunker.py  cli.py  config.py  embedder.py  extractor.py  models.py  rag.py  vectordb.py
scripts/: jenkins-status.sh  jenkins-tail.sh  jenkins-trigger.sh
