[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdfquery"
version = "0.1.0"
description = "PDF question-answering with RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.10",
    "psycopg2-binary>=2.9",
    "cohere>=5.0",
    "groq>=0.8",
    "streamlit>=1.28",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]

[project.scripts]
pdfquery = "pdfquery.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pdfquery"]
